--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="menu_settings">Settings</string>
     <string name="data_wiped">data wiped</string>
     <string name="error">error</string>
+    <string name="label_loading_error">Loading error</string>
+    <string name="btn_retry">Retry</string>
 </resources>
