--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="label_loading_error">Loading error</string>
     <string name="btn_retry">Retry</string>
     <string name="label_last_update">Last update: %s</string>
-    <string name="no_data">no data</string>
+    <string name="no_data">No data</string>
 </resources>
